--- a/Mensajerapp/MainWindow.xaml
+++ b/Mensajerapp/MainWindow.xaml
@@ -1,12 +1,93 @@
-﻿<Window x:Class="Mensajerapp.MainWindow"
+﻿<RibbonWindow x:Class="Mensajerapp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mensajerapp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
-</Window>
+        Title="Mensajerapp" Height="600" Width="1200"
+        Closed="Window_Closed">
+    <DockPanel>
+        <Menu IsMainMenu="True" DockPanel.Dock="Top">
+            <MenuItem Header="_Archivo">
+                <MenuItem Header="_Nuevo">
+                    <MenuItem Header="_Viaje"/>
+                    <MenuItem Header="_Cliente"/>
+                    <MenuItem Header="_Cadete"/>
+                </MenuItem>
+                <MenuItem Header="_Arqueo Cadete"/>
+            </MenuItem>
+            <MenuItem Header="_Ver">
+                <MenuItem Header="Vajes _Pendientes"/>
+                <MenuItem Header="Historial del _dia"/>
+                <MenuItem Header="Historial _Semanal"/>
+                <MenuItem Header="_Historial General"/>
+            </MenuItem>
+            <MenuItem Header="_Facturación"/>
+            <!--MenuItem Header="_Nuevo" Click="MenuItemNuevo_Click"/-->
+        </Menu>
+        <DockPanel>
+            <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
+                <Button Name="clientNew" Content="Nuevo" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="2" Margin="0,0,10,0" Click="clientNew_Click"/>
+                <Button Name="clientDel" Content="Borrar" IsEnabled="False" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="2" Margin="0,0,10,0" Click="clientDel_Click"/>
+            </StackPanel>
+            <TabControl Name="mainTab">
+            <TabItem Header="Viajes">
+                    <ListView Name="tripGrid" SelectionChanged="tripGrid_SelectionChanged">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Empresa" Width="200" DisplayMemberBinding="{Binding ClientName}"/>
+                                <GridViewColumn Header="Contacto" Width="200" DisplayMemberBinding="{Binding ClientContact}"/>
+                                <GridViewColumn Header="Dirección" Width="300" DisplayMemberBinding="{Binding InitAddress}"/>
+                                <GridViewColumn Header="Dirección" Width="300" DisplayMemberBinding="{Binding EndAddress}"/>
+                                <GridViewColumn Header="Telefono" Width="100" DisplayMemberBinding="{Binding Tel}"/>
+                                <GridViewColumn Header="Cadete" Width="100" DisplayMemberBinding="{Binding CadetName}"/>
+                                <GridViewColumn Header="Hora" Width="60" DisplayMemberBinding="{Binding InitHourStr}"/>
+                                <GridViewColumn Header="Estado" Width="60" DisplayMemberBinding="{Binding State}"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </TabItem>
+            <TabItem Header="Clientes" Name="clientTab">
+                <ListView Name="clientGrid" SelectionChanged="clientGrid_SelectionChanged">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Empresa" Width="240" DisplayMemberBinding="{Binding Name}"/>
+                            <GridViewColumn Header="Contacto" Width="240" DisplayMemberBinding="{Binding Contact}"/>
+                            <GridViewColumn Header="Dirección" Width="360" DisplayMemberBinding="{Binding Address}"/>
+                            <GridViewColumn Header="email" Width="240">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Email}" TextDecorations="Underline" Foreground="Blue" Cursor="Hand" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn Header="Telefono" Width="120" DisplayMemberBinding="{Binding Tel}"/>
+                            <GridViewColumn Header="Cuit" Width="120" DisplayMemberBinding="{Binding Cuit}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </TabItem>
+            <TabItem Header="Cadetes" Name="CadetTab">
+                    <ListView Name="cadetGrid" SelectionChanged="cadetGrid_SelectionChanged">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Nombre" Width="240" DisplayMemberBinding="{Binding Name}"/>
+                                <GridViewColumn Header="Dirección" Width="360" DisplayMemberBinding="{Binding Address}"/>
+                                <GridViewColumn Header="email" Width="240">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Email}" TextDecorations="Underline" Foreground="Blue" Cursor="Hand" />
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Header="Telefono" Width="120" DisplayMemberBinding="{Binding Tel}"/>
+                                <GridViewColumn Header="Cuit" Width="120" DisplayMemberBinding="{Binding Cuit}"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </TabItem>
+        </TabControl>
+        </DockPanel>
+    </DockPanel>
+</RibbonWindow>
