--- a/Mensajerapp/MainWindow.xaml
+++ b/Mensajerapp/MainWindow.xaml
@@ -5,31 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mensajerapp"
         mc:Ignorable="d"
-        Title="Mensajerapp" Height="600" Width="1200"
-        Closed="Window_Closed">
+        Title="Mensajerapp"  WindowState="Maximized"
+        Closed="Window_Closed" d:DesignWidth="1352.7">
     <DockPanel>
-        <Menu IsMainMenu="True" DockPanel.Dock="Top">
-            <MenuItem Header="_Archivo">
-                <MenuItem Header="_Nuevo">
-                    <MenuItem Header="_Viaje"/>
-                    <MenuItem Header="_Cliente"/>
-                    <MenuItem Header="_Cadete"/>
-                </MenuItem>
-                <MenuItem Header="_Arqueo Cadete"/>
-            </MenuItem>
-            <MenuItem Header="_Ver">
-                <MenuItem Header="Vajes _Pendientes"/>
-                <MenuItem Header="Historial del _dia"/>
-                <MenuItem Header="Historial _Semanal"/>
-                <MenuItem Header="_Historial General"/>
-            </MenuItem>
-            <MenuItem Header="_Facturación"/>
-            <!--MenuItem Header="_Nuevo" Click="MenuItemNuevo_Click"/-->
-        </Menu>
+        <Ribbon DockPanel.Dock="Top">
+            <Ribbon.ApplicationMenu>
+                <RibbonApplicationMenu>
+                    <RibbonApplicationMenuItem x:Name="fileCloseBtn" Header="Cerrar" Click="fileCloseBtn_Click"/>
+                </RibbonApplicationMenu>
+            </Ribbon.ApplicationMenu>
+            <RibbonTab Header="Archivo">
+                <RibbonGroup Header="Nuevo Viaje">
+                    <RibbonButton x:Name="ribbNewTrip" Label="Nuevo Viaje" LargeImageSource="Img/delivery_icon.jpg" HorizontalAlignment="Center" Click="ribbNewTrip_Click"/>
+                </RibbonGroup>
+                <RibbonGroup Header="Nuevo">
+                    <RibbonButton x:Name="ribbNewClient" Label="Nuevo Cliente" Margin="0,10,0,0" Click="ribbNewClient_Click"/>
+                    <RibbonButton x:Name="ribbNewCaddet" Label="Nuevo Cadete" Margin="0,10,0,0" Click="ribbNewCaddet_Click"/>
+                </RibbonGroup>
+                <RibbonGroup Header="Historial">
+                    <RibbonButton x:Name="ribbHistTrips" Label="Viajes" Margin="0,5,0,0"/>
+                    <RibbonButton x:Name="ribbHistClients" Label="Clientes" Margin="0,2,0,0"/>
+                    <RibbonButton x:Name="ribbHistCadets" Label="Cadetes" Margin="0,2,0,0"/>
+                </RibbonGroup>
+                <RibbonGroup Header="Arqueo">
+                    <RibbonButton x:Name="ribbArqCadet" Label="Arqueo Cadete" LargeImageSource="Img/ticket_icon.png" HorizontalAlignment="Center"/>
+                </RibbonGroup>
+            </RibbonTab>
+            <RibbonTab Header="Facturación">
+                <RibbonGroup Header="Facturas">
+                    <RibbonButton x:Name="ribbBillNew" Label="Nueva Factura" Margin="0,10,0,0"/>
+                    <RibbonButton x:Name="ribbBillHist" Label="Historial" Margin="0,10,0,0"/>
+                </RibbonGroup>
+                <RibbonGroup>
+                    <RibbonButton x:Name="ribbBillConf" Label="Opciones" LargeImageSource="Img/conf_icon.png"/>
+                </RibbonGroup>
+            </RibbonTab>
+        </Ribbon>
         <DockPanel>
             <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
-                <Button Name="clientNew" Content="Nuevo" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="2" Margin="0,0,10,0" Click="clientNew_Click"/>
-                <Button Name="clientDel" Content="Borrar" IsEnabled="False" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="2" Margin="0,0,10,0" Click="clientDel_Click"/>
+                <Button Name="clientNew" Content="Nuevo" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="2" Margin="0,0,10,0" Click="clientNew_Click" Visibility="Collapsed"/>
+                <Button Name="clientDel" Content="Borrar" IsEnabled="False" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="2" Margin="0,0,10,0" Click="clientDel_Click" Visibility="Collapsed"/>
             </StackPanel>
             <TabControl Name="mainTab">
             <TabItem Header="Viajes">
@@ -38,12 +53,13 @@
                             <GridView>
                                 <GridViewColumn Header="Empresa" Width="200" DisplayMemberBinding="{Binding ClientName}"/>
                                 <GridViewColumn Header="Contacto" Width="200" DisplayMemberBinding="{Binding ClientContact}"/>
-                                <GridViewColumn Header="Dirección" Width="300" DisplayMemberBinding="{Binding InitAddress}"/>
-                                <GridViewColumn Header="Dirección" Width="300" DisplayMemberBinding="{Binding EndAddress}"/>
+                                <GridViewColumn Header="Dirección retiro" Width="300" DisplayMemberBinding="{Binding InitAddress}"/>
+                                <GridViewColumn Header="Dirección entrega" Width="300" DisplayMemberBinding="{Binding EndAddress}"/>
                                 <GridViewColumn Header="Telefono" Width="100" DisplayMemberBinding="{Binding Tel}"/>
                                 <GridViewColumn Header="Cadete" Width="100" DisplayMemberBinding="{Binding CadetName}"/>
                                 <GridViewColumn Header="Hora" Width="60" DisplayMemberBinding="{Binding InitHourStr}"/>
                                 <GridViewColumn Header="Estado" Width="60" DisplayMemberBinding="{Binding State}"/>
+                                <GridViewColumn Header="Bulto" Width="60" DisplayMemberBinding="{Binding HasBox}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
