--- a/Mensajerapp/newClientWindow.xaml
+++ b/Mensajerapp/newClientWindow.xaml
@@ -32,7 +32,7 @@
         <TextBox x:Name="newClientContact" Grid.Column="1" Grid.Row="1" Margin="5"/>
         <TextBox x:Name="newClientAddress" Grid.Column="1" Grid.Row="2" Margin="5"/>
         <TextBox x:Name="newClientMail" Grid.Column="1" Grid.Row="3" Margin="5"/>
-        <TextBox x:Name="newClientCuit" Grid.Column="1" Grid.Row="4" Margin="5" PreviewTextInput="NumberValidationTextBox"/>
+        <TextBox x:Name="newClientCuit" Grid.Column="1" Grid.Row="4" Margin="5"/>
         <TextBox x:Name="newClientTel" Grid.Column="1" Grid.Row="5" Margin="5" PreviewTextInput="NumberValidationTextBox"/>
 
         <Grid Grid.Column="1" Grid.Row="6">
