--- a/Mensajerapp/newTripWindow.xaml
+++ b/Mensajerapp/newTripWindow.xaml
@@ -16,6 +16,8 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -26,16 +28,20 @@
         <Label Grid.Column="0" Grid.Row="1" Content="Cadete" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Grid.Column="0" Grid.Row="2" Content="Dirección" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Grid.Column="0" Grid.Row="3" Content="Dirección" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Label Grid.Column="0" Grid.Row="4" Content="Horario" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Label Grid.Column="0" Grid.Row="5" Content="Precio $" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Grid.Row="4" Content="Contacto" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Grid.Row="5" Content="Horario" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Grid.Row="6" Content="Precio $" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Grid.Row="7" Content="Bulto" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
         <ComboBox x:Name="newTripClient" Grid.Column="1" Grid.Row="0" Margin="5"/>
         <ComboBox x:Name="newTripCadet" Grid.Column="1" Grid.Row="1" Margin="5"/>
         <TextBox x:Name="newTripAddress" Grid.Column="1" Grid.Row="2" Margin="5"/>
         <TextBox x:Name="newTripAddressEnd" Grid.Column="1" Grid.Row="3" Margin="5"/>
-        <xctk:DateTimeUpDown x:Name="newTripHour" Grid.Column="1" Grid.Row="4" Format="LongTime" Value="{Binding CurrentDateTime}" />
-        <TextBox x:Name="newTripPrice" Grid.Column="1" Grid.Row="5" Margin="5"/>
-        <Grid Grid.Column="1" Grid.Row="6">
+        <TextBox x:Name="newTripContact" Grid.Column="1" Grid.Row="4" Margin="5"/>
+        <xctk:DateTimeUpDown x:Name="newTripHour" Grid.Column="1" Grid.Row="5" Format="LongTime" Value="{Binding CurrentDateTime}" />
+        <TextBox x:Name="newTripPrice" Grid.Column="1" Grid.Row="6" Margin="5"/>
+        <CheckBox x:Name="newTripBox"  Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" Margin="5,0,0,0"/>
+        <Grid Grid.Column="1" Grid.Row="8">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
